option('version', type: 'string', value: '')
option('tests', type: 'boolean', value: true)
option('man-pages', type: 'feature', value: 'auto')
option('no-setcap-or-suid', type: 'boolean', value: false)
option('suid-fallback', type: 'boolean', value: false)
option('systemd-cgroup-driver', type: 'feature', value: 'auto')
